@@ -1710,6 +1710,25 @@ void HypreParMatrix::EnsureMultTranspose() const
 #endif
 }
 
+void HypreParMatrix::ResetTranspose() const
+{
+#if (MFEM_HYPRE_VERSION == 22500 && HYPRE_DEVELOP_NUMBER >= 1) || \
+    (MFEM_HYPRE_VERSION > 22500)
+#ifdef HYPRE_USING_GPU
+   if (A->diagT)
+   {
+      hypre_CSRMatrixDestroy(A->diagT);
+      A->diagT = NULL;
+   }
+   if (A->offdT)
+   {
+      hypre_CSRMatrixDestroy(A->offdT);
+      A->offdT = NULL;
+   }
+#endif
+#endif
+}
+
 HYPRE_Int HypreParMatrix::Mult(HypreParVector &x, HypreParVector &y,
                                double a, double b) const
 {
@@ -1832,13 +1851,7 @@ void HypreParMatrix::MultTranspose(double a, const Vector &x,
       }
    }
 
-#if (MFEM_HYPRE_VERSION == 22500 && HYPRE_DEVELOP_NUMBER >= 1) || \
-    (MFEM_HYPRE_VERSION > 22500)
-#ifdef HYPRE_USING_GPU
-   MFEM_VERIFY(A->diagT != NULL,
-               "Transpose action requires EnsureMultTranspose()");
-#endif
-#endif
+   EnsureMultTranspose();
 
    hypre_ParCSRMatrixMatvecT(a, A, *Y, b, *X);
 
@@ -1855,13 +1868,7 @@ HYPRE_Int HypreParMatrix::Mult(HYPRE_ParVector x, HYPRE_ParVector y,
 HYPRE_Int HypreParMatrix::MultTranspose(HypreParVector & x, HypreParVector & y,
                                         double a, double b) const
 {
-#if (MFEM_HYPRE_VERSION == 22500 && HYPRE_DEVELOP_NUMBER >= 1) || \
-    (MFEM_HYPRE_VERSION > 22500)
-#ifdef HYPRE_USING_GPU
-   MFEM_VERIFY(A->diagT != NULL,
-               "Transpose action requires EnsureMultTranspose()");
-#endif
-#endif
+   EnsureMultTranspose();
    x.HypreRead();
    (b == 0.0) ? y.HypreWrite() : y.HypreReadWrite();
    return hypre_ParCSRMatrixMatvecT(a, A, x, b, y);
